--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,8 +5,19 @@ permalink: /teaching/
 author_profile: true
 ---
 
-{% include base_path %}
+Teaching Experience
+======
+* **2024**: Lecturer (part-time)  
+  * *Course*: Japanese Entrepreneurship and Industry  
+  * *Institution*: Meko Education Group
 
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+* **2023**: Teaching Assistant (TA)  
+  * *Course*: Development Economics (Graduate)  
+  * *Institution*: Kyoto University
+
+* **2021**: Teaching Assistant (TA)  
+  * *Course*: Research Design (Graduate)  
+  * *Institution*: Kyoto University
+
+* **2020**: Academic Tutor  
+  * *Institution*: Kyoto University (Graduate)
