--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -8,16 +8,16 @@ author_profile: true
 Teaching Experience
 ======
 * **2024**: Lecturer (part-time)  
-  * *Course*: Japanese Entrepreneurship and Industry  
-  * *Institution*: Meko Education Group
+   *Course*: Japanese Entrepreneurship and Industry  
+   *Institution*: Meko Education Group
 
 * **2023**: Teaching Assistant (TA)  
-  * *Course*: Development Economics (Graduate)  
-  * *Institution*: Kyoto University
+   *Course*: Development Economics (Graduate)  
+   *Institution*: Kyoto University
 
 * **2021**: Teaching Assistant (TA)  
-  * *Course*: Research Design (Graduate)  
-  * *Institution*: Kyoto University
+   *Course*: Research Design (Graduate)  
+   *Institution*: Kyoto University
 
 * **2020**: Academic Tutor  
-  * *Institution*: Kyoto University (Graduate)
+   *Institution*: Kyoto University (Graduate)
